Fix menu z-index.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -308,6 +308,7 @@ nav ul {
     text-align: left;
     display: inline-block;
     margin-left: 16px;
+    z-index: 10;
     overflow: visible;
 }
 
